--- a/views/user/review_write.ejs
+++ b/views/user/review_write.ejs
@@ -91,8 +91,8 @@
                             </div>
                         </div>
                         <div>내용</div>
-                        <textarea style="font-size:20px;" rows="15" name="content" placeholder="사연을 적어주세요!"></textarea>
-                        <button type="submit" class="send btn-lg btn-theme04 btn-border">작성 완료</button>
+                        <textarea class="text-write" style="font-size:20px;" rows="15" name="content" placeholder="사연을 적어주세요!"></textarea>
+                        <button type="submit" class="btn-lg btn-theme04 btn-border">작성 완료</button>
                     </form>
                 </div>
                 <form action="/review">
