--- a/views/user/story.ejs
+++ b/views/user/story.ejs
@@ -124,14 +124,10 @@
                 <a class="write-btn btn" href="/story_write"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 <!--/row -->
             </section>
-            <div id="addiv"><img src="/img/ad.JPG">
-            </div>
+            <div id="addiv"><img src="/img/ad.JPG"></div>
         </section>
         <!-- /#page-content-wrapper -->
         <br>
-
-
-
     </div>
     <!-- /#wrapper -->
 
