--- a/views/user/story_write.ejs
+++ b/views/user/story_write.ejs
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div>내용</div>
-                        <textarea style="font-size:20px;" rows="15" name="content" placeholder="사연을 적어주세요!"></textarea>
+                        <textarea class="text-write" style="font-size:20px;" name="content" placeholder="사연을 적어주세요!"></textarea>
                         <button type="submit" class="btn-lg btn-theme02 btn-border">작성 완료</button>
                     </form>
                 </div>
