세부적인 오류 수정

--- a/views/admin/main.ejs
+++ b/views/admin/main.ejs
@@ -165,7 +165,7 @@
                                 <div class="white-header">
                                 </div>
                                 <div align=center>
-                                    <h1 style="color:lightseagreen">기 타 설 정</h1>
+                                    <h1 style="color:lightseagreen">채널 이동</h1>
                                 </div>
                             </div>
                         </a>
