--- a/views/admin/notice.ejs
+++ b/views/admin/notice.ejs
@@ -99,7 +99,7 @@
                                             <%= item.Notice_ID %>
                                         </td>
                                         <td style="width:50%;">
-                                            <a href="/notice/<%= item.Notice_ID %>">
+                                            <a href="/admin/notice/<%= item.Notice_ID %>">
                                                 <%= item.Notice_Title %>
                                             </a>
                                         </td>
