--- a/views/user/main.ejs
+++ b/views/user/main.ejs
@@ -153,7 +153,7 @@
                 <input type="text" class="chat-name" placeholder="이름을 입력하세요">
                 <div class="chat-messages"></div>
                 <div class="send">
-                    <textarea class="sendchat" placeholder="메세지를 입력하세요"></textarea>
+                    <textarea class="sendchat" rows="3" placeholder="메세지를 입력하세요"></textarea>
                     <button class="btn-lg btn-theme btn-border">전송하기</button>
                 </div>
                 <div class="chat-status">Status:<span>채팅서버 활성화</span></div>
