--- a/views/user/story_content.ejs
+++ b/views/user/story_content.ejs
@@ -76,7 +76,7 @@
     <section id="main-content">
         <section class="wrapper">
             <div align='center'>
-                <a href="admin" class="logo"><b><%= story[0].User_Name %>님의 사연입니다.</b></a>
+                <a href="#" class="logo"><b><%= story[0].User_Name %>님의 사연입니다.</b></a>
             </div>
             <div class="container">
                 <div class="story_contents">
