--- a/views/admin/notice_content.ejs
+++ b/views/admin/notice_content.ejs
@@ -19,90 +19,85 @@
     <link rel="stylesheet" href="/vendor/bootstrap/css/style.css">
     <link href="/vendor/bootstrap/css/style-responsive.css" rel="stylesheet">
     <link href="/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-
 </head>
 
 <body>
     <div id="toggle-menu" class="sidebar-toggle-box">
-        <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
+        <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
     </div>
     <!-- Sidebar -->
     <aside>
-            <div id="sidebar" class="nav-collapse">
-                <ul class="sidebar-menu" id="nav-accordion">
-                    <h3 class="centered" style="color:bisque">방방곡곡</h3>
-                    <li class="mt">
-                        <a href="/admin">
+        <div id="sidebar" class="nav-collapse">
+            <ul class="sidebar-menu" id="nav-accordion">
+                <h3 class="centered" style="color:bisque">방방곡곡</h3>
+                <li class="mt">
+                    <a href="/">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
                         </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/admin/main" style="color:deeppink;">
-                            <i class="fa fa-desktop" style="color:deeppink;"></i>
-                            <span>관리 화면</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/admin/notice" style="color:yellow">
+                </li>
+                <li class="sub-menu">
+                    <a href="/notice" style="color:yellow">
                             <i class="fa fa-tasks" style="color:yellow"></i>
-                            <span>공지사항 관리</span>
+                            <span>공지사항</span>
                         </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/admin/story" style="color:darkorange">
+                </li>
+                <li class="sub-menu">
+                    <a href="/main" style="color:deeppink;">
+                            <i class="fa fa-desktop" style="color:deeppink;"></i>
+                            <span>방송 화면</span>
+                        </a>
+                </li>
+                <li class="sub-menu">
+                    <a href="/story" style="color:darkorange">
                             <i class=" fa fa-bar-chart-o" style="color:darkorange"></i>
-                            <span>사연 관리</span>
+                            <span>여행지 신청하기</span>
                         </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/admin/review" style="color:darkseagreen">
+                </li>
+                <li class="sub-menu">
+                    <a href="/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
-                            <span>후기 관리</span>
+                            <span>후기 남기기</span>
                         </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="#" onclick="loginout(event)" style="color:cornflowerblue">
+                </li>
+                <li class="sub-menu">
+                    <a href="#" onclick="loginout(event)" style="color:cornflowerblue">
                             <i class="fa fa-google" aria-hidden="true"></i>
                             <span id="AUTH_STATE" class="blue-text">(인증되지 않음)</span>
                         </a>
-                    </li>
-                </ul>
-            </div>
-        </aside>
+                </li>
+            </ul>
+        </div>
+    </aside>
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
     <section id="main-content">
         <section class="wrapper">
             <div align='center'>
-                <a href="#" class="logo"><b><%= story[0].User_Name %>님의 사연입니다.</b></a>
+                <a href="#" class="logo"><b><%= notice[0].Notice_ID %>번 공지사항 입니다.</b></a>
             </div>
             <div class="container">
-                <div class="story_contents">
+                <div class="notice_contents">
                     <div>
                         <div>
                             <span> 제  목 : </span>
-                            <span><%= story[0].Story_Title %></span>
+                            <span><%= notice[0].Notice_Title %></span>
                         </div>
                         <div>
                             <span> 작성자 : </span>
-                            <span><%= story[0].User_Name %></span>
-                        </div>
-                        <div>
-                            <span> 원하는 장소 : </span>
-                            <span><%= story[0].Story_Dest %></span>
+                            <span>관리자</span>
                         </div>
                         <div>
                             <span> 작성일 : </span>
-                            <span><%=  new Date(story[0].Story_Date).toLocaleString() %></span>
+                            <span><%=  new Date(notice[0].Notice_Date).toLocaleString() %></span>
                         </div>
                     </div>
                     <div>내용</div>
                     <div class="content_content">
-                        <%= story[0].Story_Content %>
+                        <%= notice[0].Notice_Content %>
                     </div>
-                    <form action="/admin/story">
+                    <form action="/admin/notice">
                         <input type="submit" class="send btn-lg btn-border" value="돌아가기">
                     </form>
                 </div>
@@ -111,6 +106,8 @@
     </section>
     <!-- /#page-content-wrapper -->
     <br>
+
+    <!-- /#wrapper -->
 
     <!-- Bootstrap core JavaScript -->
     <!-- Bootstrap core JavaScript -->
