--- a/views/user/review_content.ejs
+++ b/views/user/review_content.ejs
@@ -75,7 +75,7 @@
     <section id="main-content">
         <section class="wrapper">
             <div align='center'>
-                <a href="admin" class="logo"><b><%= review[0].User_Name %>님의 사연입니다.</b></a>
+                <a href="#" class="logo"><b><%= review[0].User_Name %>님의 후기입니다.</b></a>
             </div>
             <div class="container">
                 <div class="review_contents">
