--- a/views/user/notice_content.ejs
+++ b/views/user/notice_content.ejs
@@ -72,6 +72,7 @@
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
+    <!-- controller.js에서 result값들을 notice로 받아옴(list형태) -->
     <section id="main-content">
         <section class="wrapper">
             <div align='center'>
