--- a/views/user/review_write.ejs
+++ b/views/user/review_write.ejs
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div>내용</div>
-                        <textarea class="text-write" style="font-size:20px;" rows="15" name="content" placeholder="사연을 적어주세요!"></textarea>
+                        <textarea class="text-write" style="font-size:20px;" rows="15" name="content" placeholder="후기를 적어주세요!"></textarea>
                         <button type="submit" class="btn-lg btn-theme04 btn-border">작성 완료</button>
                     </form>
                 </div>
