--- a/views/user/story.ejs
+++ b/views/user/story.ejs
@@ -95,6 +95,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                   <!-- controller.js에서 result값들을 story로 받아옴(list형태) -->
                                     <% story.forEach((item)=>{ %>
                                         <tr class='clickable-row'>
                                             <td style="width:13%;">
