동영상 변경

--- a/views/admin/main.ejs
+++ b/views/admin/main.ejs
@@ -159,7 +159,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-4 mb">
-                        <a href="/admin/settings">
+                        <a href="https://www.youtube.com/playlist?list=PLDwxawnnR8ZAflcR8Lc7AKTCxa_M1JUDz">
                             <div class="white-panel pn">
                                 <i class="fa fa-gears  fa-3x fa-fw" style="font-size:400%; margin-top:20%"></i>
                                 <div class="white-header">
