영상 다시 변경

--- a/views/user/main.ejs
+++ b/views/user/main.ejs
@@ -113,7 +113,7 @@
                             player = new YT.Player('page-content-wrapper', {
                                 height: '560',
                                 width: '315',
-                                videoId: 'ZqnYqVtF0Fk',
+                                videoId: 'izYiDDt6d8s',
 
                                 events: {
                                     'onReady': onPlayerReady,
